feat: implement update Spring Security configuration.